--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -5,3 +5,17 @@ controllers:
 kernel:
     resource: ../src/Kernel.php
     type: annotation
+
+app_login:
+    path: /login
+    controller: App\Controller\SecurityController::login
+
+app_logout:
+    path: /logout
+    controller: App\Controller\SecurityController::logout
+
+admin_dashboard:
+    path: /admin
+    controller: App\Controller\AdminController::index
+    methods: GET
+    security: is_granted('ROLE_ADMIN')
